--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -93,15 +93,16 @@
   border-radius: 8px;
   transition: all 0.1s;
   max-width: max-content;
+  cursor: not-allowed;
+}
+
+.active {
+  background-color: var(--green-500);
+  color: var(--white);
   cursor: pointer;
 }
 
-.commentForm:focus-within .publish {
-  background-color: var(--green-500);
-  color: var(--white);
-}
-
-.commentForm:focus-within .publish:hover {
+.publish.active:hover {
   background-color: var(--green-300);
 }
 
